--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
             "type": "select",
             "name": "Journal date time format",
             "description": "Choose the date time format you prefer",
-            "default_value": "MM/DD/YYYY HH:MM",
+            "default_value": "YYYY.DD.MM.HH.MM.SS.NNN",
             "options": [
                 "YYYY.DD.MM.HH.MM.SS.NNN"
                 "DD.MM.YYYY HH:MM",
