--- a/manifest.json
+++ b/manifest.json
@@ -26,9 +26,9 @@
             "type": "select",
             "name": "Journal date time format",
             "description": "Choose the date time format you prefer",
-            "default_value": "YYYY.DD.MM.HH.MM.SS.NNN",
+            "default_value": "YYYY.DD.MM.HH.MM.SS.NNN.ZZZ",
             "options": [
-                "YYYY.DD.MM.HH.MM.SS.NNN"
+                "YYYY.DD.MM.HH.MM.SS.NNN.ZZZ",
                 "DD.MM.YYYY HH:MM",
                 "DD-MM-YYYY HH:MM",
                 "MM-DD-YYYY HH:MM",
